Refactor OAuth